--- a/main.html
+++ b/main.html
@@ -1,69 +1,53 @@
 <!DOCTYPE html>
-<html lang="en">
+<html>
 <head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Nested HTML Tables</title>
-   
 </head>
 <body>
-    <h1>Tables in Tables</h1>
     <table>
         <tr>
             <td>
-                <table>
+                <table class="nested-table">
+                    <tr><th colspan="2">Nested Table 2</th></tr>
                     <tr>
-                        <th colspan="2">Nested Table 1</th>
-                    </tr>
-                    <tr>
-                        <td>Row 1</td>
-                        <td>Row 2</td>
-                    </tr>
-                </table>
-            </td>
-            <td>
-                <table>
-                    <tr>
-                        <th>Nested Table 2</th>
                         <th>Column 1</th>
                         <th>Column 2</th>
                     </tr>
                     <tr>
-                        <td rowspan="2">Data</td>
-                        <td>Data 1</td>
-                        <td>Data 2</td>
+                        <td>abc</td>
+                        <td>def</td>
                     </tr>
+                </table>
+            </td>
+            <td>
+                <table class="nested-table">
+                    <tr><th>Nested Table 1</th></tr>
                     <tr>
-                        <td>Data 3</td>
-                        <td>Data 4</td>
+                        <td>
+                            <ul>
+                                <li>List item</li>
+                                <li>List item</li>
+                                <li>List item</li>
+                            </ul>
+                        </td>
                     </tr>
                 </table>
             </td>
         </tr>
         <tr>
             <td>
-                <table>
+                <table class="nested-table">
+                    <tr><th colspan="2">Nested Table 3</th></tr>
                     <tr>
-                        <th>Nested Table 3</th>
-                    </tr>
-                    <tr>
-                        <td>
-                            <ul>
-                                <li>List item 1</li>
-                                <li>List item 2</li>
-                                <li>List item 3</li>
-                            </ul>
-                        </td>
+                        <td><a href="#">Nested Table</a></td>
+                        <td>Demo Continued</td>
                     </tr>
                 </table>
             </td>
             <td>
-                <table>
+                <table class="nested-table">
+                    <tr><th>Nested Table 4</th></tr>
                     <tr>
-                        <th>Nested Table 4</th>
-                    </tr>
-                    <tr>
-                        <td class="black-cell">HTML</td>
+                        <td class="black-bg">HTML</td>
                     </tr>
                 </table>
             </td>
